# cli-trans

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cli_trans/: __init__.py  __main__.py  formatter.py  repl.py  storage.py  translator.py
docs/superpowers/specs/: 2026-05-14-cli-trans-enhancement-design.md
tests/: test_formatter.py  test_repl.py  test_storage.py  test_translator.py  test_translator_adapters.py
